--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="Vladislav" content="Владислав" />
-    <meta name="keywords" content="Работа, CSS, Верстка" />
-    <meta
-      name="description"
-      content=" разработка веб-страницы с использованием HTML, CSS и других технологий для создания красивого и функционального дизайна."
-    />
-    <title>Работа №10</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="808" />
+  <meta name="keywords" content="Dota,mid,invoker" />
+  <meta name="description"content="*"/>
+  <title>Работа №10</title>
     <link rel="icon" href="./icon.png" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="./font.css" />
